# CompBot

./: .env.default  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  index.html  openapi.json  pyproject.toml  requirements.txt
app/: app_factory.py  main.py
app/models/: chat.py
app/routers/: chat.py
app/services/: comparison_chat.py
app/services/agents/: handlers.py
app/services/ws/: manager.py
compbot/: README.md
compbot/app/: app_factory.py  main.py
compbot/app/core/: config.py
compbot/app/models/: chat.py  common.py
compbot/app/routers/: chat.py  utils.py
compbot/app/services/: comparison_chat.py
compbot/app/services/agents/: pandas.py
